k8s-build.yml
apiVersion: v1
kind: Service
metadata:
  name: demo-web-service
spec:
  type: ClusterIP
  selector:
    app: demo-web
  ports:
  - name: grpc # 与Gateway Name要一样
    protocol: TCP
    port: 443
    targetPort: 443

---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: aspnetcore-virtualservice
spec:
  hosts:
  - "*"
  gateways:
  - aspnetcore-gateway
  http:
  - match:
    - uri:
        regex: .*
    route:
    - destination:
        host: demo-web-service
        port:
          number: 443

---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: aspnetcore-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 443
      name: grpc
      protocol: HTTPS
    tls:
      #简单模式（仅需客户端验证服务端Https证书，不是双向验证（MUTUAL））
      mode: SIMPLE
      #挂载服务端证书（与之前定义的secret tls istio-ingressgateway-certs --cert对应）
      serverCertificate: /etc/istio/ingressgateway-certs/tls.crt
      #挂载服务端私钥（与之前定义的secret tls istio-ingressgateway-certs --key对应）
      privateKey: /etc/istio/ingressgateway-certs/tls.key
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: tls-foo
spec:
  host: "*"
  trafficPolicy:
    tls:
      mode: SIMPLE
